resources/css/smartguide/base.css
/* ... */
.checkbox {
	margin-top : 5px;
	margin-left: 15px;
}

.radio {
	margin-top : 5px;
	margin-left: 15px;
}

ul.chkbxrdio-grp li {
	list-style: none;
}

tr label .large-radio, tr label .large-checkbox {
	padding-top: 0px;
	padding-bottom: 0px;
}
tr .checkbox, tr .radio {
	margin-top: 0px;
	margin-bottom: 0px;
}



/* Password */
input[type="password"] {
	width: 100% !important;
}

.field-icon {
	position: relative;
	float: right;
	margin-right: 1rem; 
	margin-top: -2.5rem;
	z-index: 2;
	cursor: pointer;
}

.radio-inline,
.checkbox-inline {
	display: inline-block;
}

.radio-inline > ul,
.checkbox-inline > ul{
	padding-left: 25px;
}

.radio-inline > li,
.checkbox-inline > li {
	display: inline-block;
}

.radio-inline-flex,
.checkbox-inline-flex {
	display: inline-flex;
}

.chkbxrdio-grp .radio-inline-flex > label, .chkbxrdio-grp .checkbox-inline-flex > label {
	display: inline-flex;
}

.chkbxrdio-grp ul {
	margin-left: 0px;
	padding-left: 0px;
}

.chkbxrdio-grp li {
	list-style: none;
}

.chkbxrdio-grp label {
	margin-right: 5px;
}

.chkbxrdio-grp ul li label {
	margin-left: 5px;
	margin-right: 5px;
	display: inline;
}


.chkbxrdio-grp ul.large-checkbox li label, .chkbxrdio-grp ul.large-radio li label {
	margin-left: 5px;
	margin-right: 5px;
}

/* Large Radio / Checkbox revised (new version) */
input[type=checkbox].large,  input[type=radio].large {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

.large .checkbox-inline, .large .radio-inline {
	margin-left: 0px;
	padding-left: 0px;
}

input[type=checkbox], input[type=radio] {
	margin: 4px 0 0;
	line-height: normal;
}

input[type=checkbox], input[type=radio] {
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	padding: 0;
}

input[type=checkbox].large+label::before, input[type=radio].large+label::before {
	border: 4px solid #fff;
	-webkit-box-shadow: 0 0 0 2px #000;
	box-shadow: 0 0 0 2px #000;
	content: "";
	display: inline-block;
	left: 0;
	position: relative;
	top: 8px;
	width: 24px;
	height: 24px;
	margin-right: 5px;
}

td input[type=checkbox].large+label::before, td input[type=radio].large+label::before {
	top: 5px;
}

input[type=radio].large+label::before {
	border-radius: 50%;
}

input[type=checkbox].large:checked+label::before, input[type=radio].large:checked+label::before {
	background: #444;
}

.large label {
	cursor: pointer;
	display: block;
}

input[type=checkbox].large+label, input[type=radio].large+label {
	display: inline;
	line-height: 2.2;
	width: auto;
	font-size: inherit;
}

/* End Large Checkbox / Radio */

/* Large Checkbox/Radio Start */
.large-checkbox label, .large-radio label {
	display: inline-block;
	font-weight: initial;
	margin-left: 5px;
	margin-right: 5px;
}

input[type="checkbox"].large-checkbox, input[type="radio"].large-radio {
	-webkit-appearance: none;
	width			 : 23px;
	height			: 23px;
	background		: white;
	border-radius	 : 4px;
	border-top		: 2px solid #aaa;
	border-bottom	 : 2px solid #aaa;
	border-left	   : 2px solid #aaa;
	border-right	  : 2px solid #aaa;
	vertical-align	: middle;
	margin-top		: 0px;
	padding-left	  : 0px;
}

input[type="checkbox"].large-checkbox:hover, input[type="radio"].large-radio:hover {
	border-bottom: 2px solid #929496;
	border-right: 2px solid #929496;
}

/* Large Checkbox Start */
input[type="checkbox"].large-checkbox:checked::before {
	font-family  : "Font Awesome 5 Free";
	font-weight  : 900;
	font-size	: 16px;
	content	  : "\f00c";
	color		: #555;
	padding-left: 2.5px;
}

input[type="checkbox"].large-checkbox:indeterminate::before {
	font-family  : "Font Awesome 5 Free";
	font-weight  : 900;
	font-size	: 16px;
	content	  : "\f068";
	color		: #555;
}
/* Large Checkbox - End */

/* Large Radio - Start */
input[type="radio"].large-radio {
	border-radius	 : 100px;
}

input[type="radio"].large-radio:checked::before {
	font-family : "Font Awesome 5 Free";
	font-weight : 900;
	font-size   : 14px;
	content	 : "\f111";
	color	   : #555;
	/* position	 : absolute; will break if overflow: scroll*/
	padding-left: 2.5px;
	/* padding-top : 3px; */
}
/* Large-Radio - End */

/* File Upload */
.btn-file {
	position: relative;
	overflow: hidden;
}

.btn-file input[type=file] {
	position: absolute;
	top: 0;
	right: 0;
	min-width: 100%;
	min-height: 100%;
	font-size: 100px;
	text-align: right;
	filter: alpha(opacity=0);
	opacity: 0;
	background: red;
	cursor: inherit;
	display: block;
}

input[type=file][readonly] {
	background-color: white !important;
	cursor: text !important;
}
/* File Upload */

/* Alerts */
.alert > :first-child {
	margin-left: 1.2em;
	margin-top: auto;
	margin-bottom: 10px;
}
/* Alerts End */

/* Breadcrumb */
.breadcrumb {
	border: 1px solid #8e8e8e;
	background-color: #f5f5f5;
}

.breadcrumb .active {
	color: #696969;
}

.breadcrumb>li>a {
	color: #00749e;
}
/* Breadcrumb end */

input.autocomplete::after {
    content: "\f0d7";
    font-family: "Font Awesome 5 Free";
    right: 0;
    bottom: 4px;
    position: absolute;
    color: dimgrey;
    pointer-events: none;
}

/* JQuery-Idle-Hands */
#jquery-idle-hands {
	display: none;
	margin: 0 !important;
	padding: 0 !important;
	font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 14px;
	color: #666666;
}

#jquery-idle-hands-overlay {
	background-color: rgba(0,0,0,0.25) !important;
}

#jquery-idle-hands-dialog {
	background-color: #ffffff !important;
	border-radius: 4px !important;
	padding: 0px !important;
	margin: 0px !important;
	min-width: 300px !important;
	font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif !important;
	border: 1px solid #eea236;
	color: #666666;
}
/* ... */

